Chance style, name and logo

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/socialite/google/callback
 
 
 SILID_ALLOWED_DOMAINS="mktv.mx, gmail.com"
-SILID_HOSTNAME="http://booking.company.com"
+SILID_HOSTNAME="http://localhost:8000"
 MAIL_DRIVER="smtp"
 MAIL_HOST="localhost"
 MAIL_PORT="1"
